--- a/views/138squad3.ejs
+++ b/views/138squad3.ejs
@@ -102,14 +102,17 @@
                    <span class="overview-description">
                     Manage elections more effectively with the comprehensive voter database feature for squad 3. Explore a detailed map with every house marked for easy navigation and identification. Access and download complete voter information for each house,
                      streamlining your election planning and execution. Enhance your election strategy with precise, location-based data for squad 3.</span>
-                   <div class="votestat">
-                    <a class="total-vote">Total Vote <br><h2 > <%= count %></h2></a>
-                    <a class="vote-complete">Voted <br><h2 > <%= count1 %></h2></a>
-                    <a href="/squad3notvoted" class="vote-incomplete">Not Voted <br><h2 > <%= count2 %></h2></a>
-                    <a class="vote-availability">Unavailable <br><h2 > <%= count3 %></h2></a>
-                    <a class="vote-open">Open Vote <br><h2 > <%= count5 %></h2></a>
-                    <a class="vote-postal">Postal Vote <br><h2 > <%= count5 %></h2></a>
-                   </div>
+                     <div class="votestat">
+                      <a class="total-vote">Total Vote <br><h2 > <%= count %></h2></a>
+                      <a class="vote-complete">Voted <br><h2 > <%= count1 %></h2></a>
+                      <a href="/squad3notvoted" class="vote-incomplete">Not Voted <br><h2 > <%= count2 %></h2></a>
+                      <a class="vote-availability">Unavailable <br><h2 > <%= count3 %></h2></a>
+                      <a class="vote-open">Open Vote <br><h2 > <%= count5 %></h2></a>
+                      <a class="vote-postal">Postal Vote <br><h2 > <%= count5 %></h2></a>
+                      <a class="vote-favoured">Favoured <br><h2 > <%= count6 %></h2></a>
+                      <a class="vote-fund">Fund <br><h2 > <%= count7 %>&#8377;</h2></a>
+                      <a class="vote-expenses">Expenses <br><h2 > <%= count8 %>&#8377;</h2></a>
+                     </div>
                </div>
                  
            </div>
@@ -127,7 +130,37 @@
        
          
            <section class="contact">
-          
+            <form id="fund" method="POST" enctype="multipart/form-data">
+                        
+                        
+              <span class="description"> Fund Management :</span>     
+              <div class="data savedata" style=" padding: 15px;">
+                 
+                  <div style="display: grid; grid-template-columns: auto auto;">
+           
+                  <p style="padding: 20 0;font-weight: semi-bold;">Name :</p>
+                  <input name="name" id="name-btn" placeholder="Name" required>
+                  <p style="padding: 20 0;font-weight: semi-bold;">Amount :</p>
+                  <input  name="amount" id="amount-btn" placeholder="Amount" required>
+                  <p style="padding: 20 0;font-weight: semi-bold;"> Type :</p>
+                  <select name="fundtype" class="selection-btn" id="type-btn">
+                    <option value="donation">Donation</option>
+                  <option value="expenses">Expenses</option>
+                </select>
+                  
+                  <input  type="hidden" name="squadno" id="squad-btn" placeholder="Squad No:" value="3" required>
+                  
+              
+                  </div>
+                 
+              
+              </div>
+                  <div class="save-delete">
+                  <button type="submit" class="btn btn2" >Save</button>
+                  <a class="delete" ><i class="fa-solid fa-download"></i></a>
+                </div>
+              
+          </form> 
                    <gmp-map
            id="marker-click-event-example"
            center="11.8309  ,   75.4372"
@@ -205,6 +238,17 @@
    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDn4lHzl_n5h7vQOz1jthHgTw-geOT5LIA&callback=initMap&libraries=marker&v=beta"
    defer></script>
     <script>
+      document.getElementById('fund').addEventListener('submit', function(event){
+
+const form = event.target;
+const squadno=document.getElementById("squad-btn").value.toLowerCase();
+const name=document.getElementById("name-btn").value.toLowerCase();
+const amount=document.getElementById("amount-btn").value.toLowerCase();
+const fundtype=document.getElementById("type-btn").value.toLowerCase();
+
+form.action = `/fund/${squadno}/${name}/${amount}/${fundtype}`;
+});
+
       function searchData() {
           
         var input = document.getElementById("myInput").value.toLowerCase();
