--- a/views/savedata.ejs
+++ b/views/savedata.ejs
@@ -177,6 +177,7 @@
                             <input type="hidden"  name="availability" placeholder="" value="yes" required>
                             <input type="hidden"  name="openvote" placeholder="" value="no" required>
                             <input type="hidden"  name="postalvote" placeholder="" value="no" required>
+                            <input type="hidden"  name="favoured" placeholder="" value="yes" required>
                             
                             <p id="dateNumber"></p>
                             <input type="hidden" name="date" value="${dateNumber}">
