--- a/views/squad5notvoted.ejs
+++ b/views/squad5notvoted.ejs
@@ -107,9 +107,8 @@
                     <a  class="total-vote">Total Vote <br><h2 > <%= count %></h2></a>
                     <a  class="vote-complete">Voted <br><h2 > <%= count1 %></h2></a>
                     <a  class="vote-incomplete">Not Voted <br><h2 > <%= count2 %></h2></a>
-                    <a class="vote-availability">Unavailable <br><h2 > <%= count3 %></h2></a>
-                    <a class="vote-open">Open Vote <br><h2 > <%= count5 %></h2></a>
-                    <a class="vote-postal">Postal Vote <br><h2 > <%= count5 %></h2></a>
+                    <a  class="vote-favoured">Favoured <br><h2 > <%= count6 %></h2></a>
+                   
                    </div>
                </div>
                  
