--- a/views/voterlist.ejs
+++ b/views/voterlist.ejs
@@ -110,6 +110,9 @@
                     <a href="/booth138avail"  class="vote-availability">Unavailable <br><h2 > <%= count3 %></h2></a>
                     <a href="/booth138open" class="vote-open">Open Vote <br><h2 > <%= count5 %></h2></a>
                     <a href="/booth138postal" class="vote-postal">Postal Vote <br><h2 > <%= count5 %></h2></a>
+                    <a href="/booth138fav" class="vote-favoured">Favoured <br><h2 > <%= count6 %></h2></a>
+                    <a href="booth138donation" class="vote-fund">Fund <br><h2 > <%= count7 %>&#8377;</h2></a>
+                    <a href="booth138expenses" class="vote-expenses">Expenses <br><h2 > <%= count8 %>&#8377;</h2></a>
                    </div>
                </div>
                  
