--- a/views/soilhealth.ejs
+++ b/views/soilhealth.ejs
@@ -100,6 +100,9 @@
                   <a class="vote-availability">Unavailable <br><h2 > <%= count3 %></h2></a>
                   <a class="vote-open">Open Vote <br><h2 > <%= count5 %></h2></a>
                   <a class="vote-postal">Postal Vote <br><h2 > <%= count5 %></h2></a>
+                  <a class="vote-favoured">Favoured <br><h2 > <%= count6 %></h2></a>
+                    <a class="vote-fund">Fund <br><h2 > <%= count7 %> &#8377;</h2></a>
+                    <a class="vote-expenses">Expenses <br><h2 > <%= count8 %> &#8377;</h2></a>
                  </div>
                    
                        
