--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -5,7 +5,9 @@
          
          <link rel="stylesheet" href="/welcome.css">
          <link rel="stylesheet" href="/farmer.css">
+         <link rel="stylesheet" href="/anime.css">
          <script src="/navbar.js" defer></script>
+         <script src="/anime.js" defer></script>
          <link rel="stylesheet" href="/footer.css">
          <link rel="preconnect" href="https://fonts.googleapis.com">
          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,6 +16,8 @@
          <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
          <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+         <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
+
          <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
          <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
          <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -82,14 +86,15 @@
              
                 <div class="row">
                    <div class="overview-col">
-                       <div class="welcome-text">
-                       <h1>WELCOME TO TELINSO</h1>
-                        <h2>Hello <span>Comrade</span></h2>
-                       <h2 id="greeting"></h2>
-                       
-                       </div>
-                       <img src="welcome.png" alt="">
-                    
+                      <img src="welcome2.png"  >
+                     
+                
+                    <div class="welcome-text">
+                        <h1>WELCOME TO TELINSO</h1>
+                         <h2>Hello <span>Comrade</span></h2>
+                        <h2 id="greeting"></h2>
+                        
+                        </div>
                        <h2>Workers of the world, unite! <i class="fa-solid fa-heart-circle-plus"></i></h2>
                        
                        <div class="Date-time">
@@ -279,6 +284,9 @@
     document.getElementById("greeting").innerHTML = greeting;
     document.getElementById("dateNumber").innerHTML = dateNumber +" "+ months;
     document.getElementById("day").innerHTML = "Let's Make "+day+" Fruitfull";
+
+    
+
   </script>
   
                          
