--- a/public/soilhealth.css
+++ b/public/soilhealth.css
@@ -198,6 +198,20 @@ gmp-map {
 .soil-date{
   padding: 10px;
 }
+.savedata select {
+  width: 100%;
+  padding: 10px 0;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  margin: 10px 0;
+  border-radius: 4px;
+  font-size: 18px;
+  color: #fff;
+  text-align: center;
+  background: #1d1233;
+  transition: 0.2s ;
+}
 .showmore{
   background: transparent;
   text-decoration: none;
@@ -451,7 +465,7 @@ svg{
     
     .votestat{
       display: grid;
-      grid-template-columns:  auto auto;
+      grid-template-columns:  50% 50% ;
       padding: 10px;
       margin: 10px;
 
@@ -459,11 +473,42 @@ svg{
     .votestat a{
       color: black;
       box-shadow:  0px 0px 20px rgba(0, 0, 0, 0.1);
-      padding: 15px;
-      margin: 15px;
+      padding: 10px;
+      margin: 10px;
+      font-size: 18px;
       border-radius: 10px;
       text-decoration: none;
+      font-family: 'Montserrat', sans-serif;
    
+    }
+    
+.save-delete{
+  display: grid;
+  grid-template-columns: 80% 20%;
+  gap: 5px;
+  margin: 10px 20px;
+}
+.delete {
+  padding: 19px;
+  font-size: 20px;
+  font-weight: 500;
+  margin-top: auto;
+  flex-basis: 15%;
+  border-radius: 10px;
+  cursor: pointer;
+  color: white;
+  background:linear-gradient(#251742,#482b7c) ;
+  border: none;
+}
+.delete i{
+  
+  color: white;
+  font-size: 18px;
+  align-items: center;
+  text-align: center;
+}
+    .votestat h2{
+      font-size: 22px;
     }
     .total-vote{
       background-image: radial-gradient( circle 975px at 2.6% 48.3%,  rgb(225, 238, 244) 0%, rgb(222, 240, 246) 99.7% );
@@ -472,16 +517,28 @@ svg{
       background-image: radial-gradient( circle 975px at 2.6% 48.3%,  rgb(194, 241, 201) 0%, rgb(108, 230, 106) 99.7% );
     }
     .vote-incomplete{
-      background-image: radial-gradient( circle 975px at 2.6% 48.3%,  rgb(244, 202, 202) 0%, rgb(244, 157, 157) 99.7% );
+      background-image: radial-gradient( circle 975px at 2.6% 48.3%,  rgb(244, 202, 202) 0%, rgb(241, 202, 202) 99.7% );
     }
     .vote-open{
-      background-image: radial-gradient( circle 975px at 2.6% 48.3%,  rgb(244, 202, 233) 0%, rgb(244, 157, 157) 99.7% );
+      background-image: radial-gradient(circle 975px at 2.6% 48.3%, rgb(202, 237, 244) 0%, rgb(238, 246, 213) 99.7%);
+
+
     }
     .vote-postal{
-      background-image: radial-gradient( circle 975px at 2.6% 48.3%,  rgb(230, 244, 202) 0%, rgb(244, 157, 219) 99.7% );
+      background-image: radial-gradient(circle at 25% 75%, rgb(212, 236, 240) 0%, rgb(215, 233, 194) 100%);
+
     }
     .vote-availability{
-      background-image: radial-gradient( circle 975px at 2.6% 48.3%,  rgb(202, 237, 244) 0%, rgb(189, 196, 167) 99.7% );
+      background-image: radial-gradient( circle 975px at 2.6% 48.3%,  rgb(230, 215, 241) 0%, rgb(244, 214, 240) 99.7% );
+    }
+    .vote-favoured{
+      background-image: radial-gradient( circle 975px at 2.6% 48.3%,  rgb(231, 244, 202) 0%, rgb(189, 196, 167) 99.7% );
+    }
+    .vote-fund{
+      background-image: radial-gradient( circle 975px at 2.6% 48.3%,  rgb(215, 237, 248) 0%, rgb(243, 241, 207) 99.7% );
+    }
+    .vote-expenses{
+      background-image: radial-gradient( circle 975px at 2.6% 48.3%,  rgb(199, 242, 198) 99.7%, rgb(202, 237, 244) 0% );
     }
     .text-box{
         width:100%;
